--- a/package.json
+++ b/package.json
@@ -5,89 +5,85 @@
   "author": "castiel",
   "private": true,
   "scripts": {
-    "dev": "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
-    "start": "npm run dev",
+    "start:dev": "webpack serve --config ./webpack.dev.js",
     "lint": "eslint --ext .js,.vue src",
-    "build": "node build/build.js"
+    "build": "node tool/build.js"
   },
   "dependencies": {
-    "axios": "^0.19.0",
-    "vue": "^2.5.2",
-    "vue-i18n": "^8.11.2",
+    "axios": "^0.21.1",
+    "core-js": "^3.8.3",
+    "vue": "^2.6.12",
+    "vue-i18n": "^8.22.4",
     "vue-quill-editor": "^3.0.6",
-    "vue-router": "^3.0.1",
-    "vuex": "^3.0.1"
+    "vue-router": "^3.5.1",
+    "vuex": "^3.6.2"
   },
   "devDependencies": {
+    "@babel/core": "^7.12.13",
+    "@babel/eslint-parser": "^7.12.17",
+    "@babel/plugin-proposal-decorators": "^7.12.13",
+    "@babel/plugin-proposal-object-rest-spread": "^7.12.13",
+    "@babel/plugin-syntax-dynamic-import": "^7.8.3",
+    "@babel/plugin-transform-runtime": "^7.12.15",
+    "@webpack-cli/serve": "^1.3.0",
     "ansi-html": "^0.0.7",
-    "ant-design-vue": "^1.3.0",
-    "autoprefixer": "^7.1.2",
-    "babel-core": "^6.22.1",
-    "babel-eslint": "^8.2.1",
-    "babel-helper-vue-jsx-merge-props": "^2.0.3",
-    "babel-loader": "^7.1.1",
-    "babel-plugin-syntax-jsx": "^6.18.0",
-    "babel-plugin-transform-class-properties": "^6.24.1",
-    "babel-plugin-transform-decorators-legacy": "^1.3.5",
-    "babel-plugin-transform-runtime": "^6.22.0",
-    "babel-plugin-transform-vue-jsx": "^3.7.0",
-    "babel-preset-env": "^1.3.2",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-stage-2": "^6.22.0",
-    "base64-js": "^1.3.0",
-    "chalk": "^2.0.1",
-    "copy-webpack-plugin": "^4.6.0",
-    "css-loader": "^2.1.0",
-    "eslint": "^4.15.0",
-    "eslint-config-standard": "^10.2.1",
-    "eslint-friendly-formatter": "^3.0.0",
-    "eslint-loader": "^2.1.1",
-    "eslint-plugin-import": "^2.7.0",
-    "eslint-plugin-node": "^5.2.0",
-    "eslint-plugin-promise": "^3.4.0",
+    "ant-design-vue": "^1.7.2",
+    "autoprefixer": "^10.2.4",
+    "babel-loader": "^8.2.2",
+    "base64-js": "^1.5.1",
+    "chalk": "^4.1.0",
+    "copy-webpack-plugin": "^7.0.0",
+    "css-loader": "^5.0.2",
+    "eslint": "^7.19.0",
+    "eslint-config-standard": "^16.0.2",
+    "eslint-friendly-formatter": "^4.0.1",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^3.0.1",
-    "eslint-plugin-vue": "^4.0.0",
-    "file-loader": "^3.0.1",
+    "eslint-plugin-vue": "^7.5.0",
+    "eslint-webpack-plugin": "^2.5.0",
+    "file-loader": "^6.2.0",
     "friendly-errors-webpack-plugin": "^1.7.0",
-    "html-entities": "^1.2.1",
-    "html-webpack-plugin": "^3.2.0",
-    "ieee754": "^1.1.13",
+    "html-entities": "^2.1.0",
+    "html-webpack-plugin": "^5.0.0",
+    "ieee754": "^1.2.1",
     "less": "^3.9.0",
-    "less-loader": "^4.1.0",
-    "loglevel": "^1.6.1",
-    "mini-css-extract-plugin": "^0.5.0",
-    "moment": "^2.23.0",
-    "node-notifier": "^5.1.2",
-    "optimize-css-assets-webpack-plugin": "^5.0.1",
-    "ora": "^1.2.0",
-    "portfinder": "^1.0.13",
-    "postcss-import": "^11.0.0",
-    "postcss-loader": "^2.0.8",
-    "postcss-url": "^7.2.1",
-    "rimraf": "^2.6.0",
-    "rxjs": "^6.5.2",
-    "semver": "^5.3.0",
+    "less-loader": "^8.0.0",
+    "loglevel": "^1.7.1",
+    "mini-css-extract-plugin": "^1.3.6",
+    "moment": "^2.29.1",
+    "node-notifier": "^9.0.0",
+    "optimize-css-assets-webpack-plugin": "^5.0.4",
+    "ora": "^5.3.0",
+    "portfinder": "^1.0.28",
+    "postcss-import": "^14.0.0",
+    "postcss-loader": "^5.0.0",
+    "postcss-url": "^10.1.1",
+    "rimraf": "^3.0.2",
+    "rxjs": "^6.6.3",
+    "semver": "^7.3.4",
     "setimmediate": "^1.0.5",
-    "shelljs": "^0.7.6",
-    "sockjs-client": "^1.3.0",
-    "ts-loader": "^5.3.3",
+    "shelljs": "^0.8.4",
+    "sockjs-client": "^1.5.0",
+    "ts-loader": "^8.0.16",
     "tslint": "^5.12.1",
-    "tslint-config-standard": "^8.0.1",
+    "tslint-config-standard": "^9.0.0",
     "tslint-loader": "^3.5.4",
-    "typescript": "^3.2.2",
-    "uglifyjs-webpack-plugin": "^2.1.1",
-    "url-loader": "^1.1.2",
-    "vue-class-component": "^6.3.2",
+    "typescript": "^4.1.4",
+    "uglifyjs-webpack-plugin": "^2.2.0",
+    "url-loader": "^4.1.1",
+    "vue-class-component": "^7.2.6",
     "vue-loader": "^15.5.1",
-    "vue-property-decorator": "^7.2.0",
+    "vue-property-decorator": "^9.1.2",
     "vue-rx": "^6.2.0",
-    "vue-style-loader": "^3.0.1",
-    "vue-template-compiler": "^2.5.2",
-    "webpack": "^4.28.4",
-    "webpack-bundle-analyzer": "^3.0.3",
-    "webpack-cli": "^3.2.1",
-    "webpack-dev-server": "^3.1.14",
-    "webpack-merge": "^4.2.1"
+    "vue-style-loader": "^4.1.2",
+    "vue-template-compiler": "^2.6.12",
+    "webpack": "^5.21.2",
+    "webpack-bundle-analyzer": "^4.4.0",
+    "webpack-cli": "^4.0.0",
+    "webpack-dev-server": "^3.11.2",
+    "webpack-merge": "^5.7.3"
   },
   "engines": {
     "node": ">= 6.0.0",
